# openstack-workload-disaster-recovery

./: HACKING.rst  MANIFEST.in  README.rst  install.sh  openstack-common.conf  pylintrc  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
contrib/: flame-cinderv2.patch  flame-managers-auth.patch
doc/source/: Makefile  api.rst  conf.py  dragonclient_api.rst  index.rst  periodic_protect.rst
doc/source/architecture/: index.rst
doc/source/manual_install/: manual_install.rst
doc/source/protect_workload/: index.rst
docs/: api.md
dragon/: __init__.py  flow_utils.py  version.py
dragon/cmd/: manage.py
dragon/common/: auth_password.py  config.py  context.py  crypt.py  custom_backend_auth.py  dragon_keystoneclient.py  environment_format.py  exception.py  messaging.py  plugin_loader.py  policy.py  template_format.py  urlfetch.py  wsgi.py
dragon/compute/: __init__.py
dragon/db/: api.py  migration.py  sync.py  utils.py
dragon/engine/: api.py  clients.py  dependencies.py  parameters.py  scheduler.py  service.py
dragon/locale/: dragon.pot
dragon/rpc/: api.py  client.py
dragon/template/: heat_flame_template.py  heat_template.py  heat_template_utils.py
dragon/volume/: __init__.py
dragon/workload_policy/: workload_policy.py
etc/dragon/: api-paste.ini  cinder.conf  dragon.conf
services/: openstack-dragon-api  openstack-dragon-engine
tools/: enable-pre-commit-hook.sh  install_venv.py  lintstack.py
tools/config/: check_uptodate.sh  dragonclient_api_doc  generate_sample.sh
tools/system_test_scripts/: test_dr.py
(+89 files in other folders)
