[metadata]
name = dragon
version = 2014.1.2
summary = IBM OpenStack DR
description-file =
    README.rst
author = IBM
author-email = oshritf@il.ibm.com
home-page = www.ibm.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Copyright IBM Corp. 2014
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    dragon 

scripts =
    bin/dragon-api
    bin/dragon-db-setup
    bin/dragon-engine
    bin/dragon-keystone-setup
    bin/dragon-manage

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = dragon/locale
domain = dragon

[update_catalog]
domain = dragon
output_dir = dragon/locale
input_file = dragon/locale/dragon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = dragon/locale/dragon.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
